--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -1,30 +1,14 @@
 {% extends 'base.html' %}
-{% block title %}
-  {{ title }}{{group}}
-{% endblock %}
+{% block title %}Список групп{% endblock %}
 {% block content %}
-<div class="container py-5">
-  <h1>{{group}} – зеркало русской революции.</h1>
-  <p>
-    Группа тайных поклонников графа.
-  </p>
-  {% for post in posts %}
-  <article>
-    <ul>
-      <li>
-        Автор: {{post.author.get_full_name}}
-      </li>
-      <li>
-        Дата публикации: {{post.pub_date|date:"d E Y"}}
-      </li>
-    </ul>      
-    <p>
-      {{post.text}}
-    </p>         
-  </article>
-  {% if not forloop.last %}
-    <hr>
-  {% endif %}
-  {% endfor %}
-</div>  
+  <div class="container py-5">
+    <h1>{{ group.title }}</h1>
+    <p>{{ group.description }}</p>
+        <article>
+        {% for post in paje_obj %}
+         {% include "posts/index.html" %}
+        {% endfor %}
+        {% include "posts/includes/paginator.html" %}
+        </article>>
+  </div>
 {% endblock %}
